glow overflow corrections

--- a/docs/ensrainbow/src/styles/slider-styles.css
+++ b/docs/ensrainbow/src/styles/slider-styles.css
@@ -1,6 +1,6 @@
 .image1, .image2 {
     max-width: 100%;
-    width: 440px;
+    width: 500px;
     height: 350px;
     user-select: none;
     pointer-events: none;
@@ -19,14 +19,14 @@
 
 @keyframes lrtest {
     0% {
-        clip-path: polygon(0 0, 8% 0, 8% 100%, 0 100%);
+        clip-path: polygon(0 0, 12% 0, 12% 100%, 0 100%);
     }
     50% {
-        clip-path: polygon(0 0, 92% 0, 92% 100%, 0 100%);
+        clip-path: polygon(0 0, 88% 0, 88% 100%, 0 100%);
     }
 
     100% {
-        clip-path: polygon(0 0, 8% 0, 8% 100%, 0 100%);
+        clip-path: polygon(0 0, 12% 0, 12% 100%, 0 100%);
     }
 }
 
@@ -52,8 +52,8 @@
     inset: 0;
     box-shadow:
             inset 0 18px 12px -5px white,
-            inset 0 -18px 12px -5px white,
-            inset -10px 0 12px -3px white;
+            inset 0 -18px 12px -5px white;
+            /*inset -10px 0 12px -3px white;*/
 
     z-index: 2;
 }
@@ -74,14 +74,14 @@
 
 @keyframes lrController {
     0% {
-        left: 8%;
+        left: 12%;
     }
     50% {
-        left: 92%;
+        left: 88%;
     }
 
     100% {
-        left: 8%;
+        left: 12%;
     }
 }
 
